back/error_app_utf8.log
node : C:\Users\learn\d
evtalkx\back\app.js:80
At line:1 char:1
+ node app.js > 
error_app.log 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (C:\Users\lear   
 n\devtalkx\back\ap    
p.js:80:String) []    
, RemoteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
const authRouter = requ
ire("./src/routes/auth"
);
      ^

SyntaxError: 
Identifier 
'authRouter' has 
already been declared
    at wrapSafe (node:i
nternal/modules/cjs/loa
der:1692:18)
    at Module._compile 
(node:internal/modules/
cjs/loader:1735:20)
    at Object..js (node
:internal/modules/cjs/l
oader:1893:10)
    at Module.load (nod
e:internal/modules/cjs/
loader:1481:32)
    at Module._load (no
de:internal/modules/cjs
/loader:1300:12)
    at TracingChannel.t
raceSync (node:diagnost
ics_channel:328:14)
    at wrapModuleLoad (
node:internal/modules/c
js/loader:245:24)
    at Module.executeUs
erEntryPoint [as 
runMain] (node:internal
/modules/run_main:154:5
)
    at node:internal/ma
in/run_main_module:33:4
7

Node.js v24.12.0
